[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/ThaleahFat_21.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/ui/home_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/ui/home_button.png" type="Texture" id=3]
[ext_resource path="res://DungeonCrawler/UI/PageTemplate.gd" type="Script" id=4]
[ext_resource path="res://DungeonCrawler/UI/Animation/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/MainMenuButton.gd" type="Script" id=6]
[ext_resource path="res://Assets/l0_sprite_mainui1-19201080.png" type="Texture" id=7]
[ext_resource path="res://Assets/l1_sprite_mainui1-19201080.png" type="Texture" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends ParallaxBackground


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
export (float) var scrolling_speed = 500.0

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x += scrolling_speed + delta
"

[node name="PageTemplate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource( 1 )
scrolling_speed = 1.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 255, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 128.227, 71.0345 )
scale = Vector2( 0.133, 0.133 )
texture = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 10.0
margin_right = 215.0
margin_bottom = 30.0
rect_min_size = Vector2( 190, 20 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.898039, 0.447059, 1 )
custom_colors/font_color_shadow = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Page Template"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 23.0
margin_bottom = 23.0
rect_min_size = Vector2( 15, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://DungeonCrawler/UI/MenuPage/MainMenu.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
